# adventofcode2025

./: .gitignore
adventofcode_day1/: CMakeLists.txt  main.cpp
adventofcode_day1/Debug/: AOC1  CMakeCache.txt  Makefile  cmake_install.cmake
adventofcode_day2/: CMakeLists.txt  main.cpp
